# breez-sdk-spark-flutter

./: pubspec.yaml
android/: build.gradle
ios/: breez_sdk_spark_flutter.podspec
lib/src/rust/: chain_service.dart  connection_manager.dart  errors.dart  errors.freezed.dart  events.dart  events.freezed.dart  frb_generated.dart  frb_generated.io.dart  issuer.dart  models.dart  models.freezed.dart  passkey.dart  sdk.dart  sdk_builder.dart  sdk_context.dart  ssp_connection_manager.dart
macos/: breez_sdk_spark_flutter.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  models.rs
