[package]
name = "breez_sdk_spark_flutter"
version = "0.12.2-dev2"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
async-trait = "0.1.88"
# Replaced with release commit during publishing
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk.git", rev = "c8772a6fa50e27dc8695bee5c5cc1a11825de3e3", features = [
    "openssl-vendored",
    "passkey",
] }
extend = "1.2.0"
flutter_rust_bridge = "=2.11.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Support for 16KB page sizes on Android 15+ 64-bit architectures
[target.aarch64-linux-android]
rustflags = [
    "-C",
    "link-arg=-Wl,--hash-style=both",
    "-C",
    "link-arg=-Wl,-z,max-page-size=16384",
]

[target.x86_64-linux-android]
rustflags = [
    "-C",
    "link-arg=-Wl,--hash-style=both",
    "-C",
    "link-arg=-Wl,-z,max-page-size=16384",
]
